doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.8.0_05\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\SONY\Desktop\ojekampus\ojekampus\ojekampus
-d
C:\Users\SONY\Desktop\ojekampus\ojekampus\ojekampus\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\SONY\Desktop\ojekampus\ojekampus\ojekampus\CustomerGUI.java
<---- end of javadoc command ---->
Loading source file C:\Users\SONY\Desktop\ojekampus\ojekampus\ojekampus\CustomerGUI.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_05
Building tree for all the packages and classes...
Generating C:\Users\SONY\Desktop\ojekampus\ojekampus\ojekampus\doc\CustomerGUI.html...
Generating C:\Users\SONY\Desktop\ojekampus\ojekampus\ojekampus\doc\package-frame.html...
Generating C:\Users\SONY\Desktop\ojekampus\ojekampus\ojekampus\doc\package-summary.html...
Generating C:\Users\SONY\Desktop\ojekampus\ojekampus\ojekampus\doc\constant-values.html...
Generating C:\Users\SONY\Desktop\ojekampus\ojekampus\ojekampus\doc\serialized-form.html...
C:\Users\SONY\Desktop\ojekampus\ojekampus\ojekampus\RegistrasiPelangganGUI.java:16: error: invalid method declaration; return type required
    public RegistGUI()
           ^
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\SONY\Desktop\ojekampus\ojekampus\ojekampus\doc\allclasses-frame.html...
Generating C:\Users\SONY\Desktop\ojekampus\ojekampus\ojekampus\doc\allclasses-noframe.html...
Generating C:\Users\SONY\Desktop\ojekampus\ojekampus\ojekampus\doc\index.html...
Generating C:\Users\SONY\Desktop\ojekampus\ojekampus\ojekampus\doc\stylesheet.css...
1 error
